# m17n-db

./: .cvsignore  .gitignore  ARAB-OTF-NO-GPOS.flt  ARAB-OTF.flt  ARAB.flt  ARABIC-OTF.flt  ARABIC.flt  AUTHORS  BEN-OTF.flt  BENG-OTF.flt  BLOCK.tab  CASE-MAPPING.awk  CASED.awk  CHARSET.tbl  CHARTAB.awk  CODING.tbl  ChangeLog  ChangeLog.contrib  DEV-CDAC.flt  DEV-OTF.flt  DEVA-CDAC.flt  DEVA-OTF.flt  FONTENC.tbl  FONTSIZE.tbl  GUJ-OTF.flt  GUJR-OTF.flt  GUR-OTF.flt  GURU-OTF.flt  HEBR-FF.flt  HEBR.flt  HEBREW-FF.flt  HEBREW.flt  KHMER-ANLONG.flt  KHMR-ANLONG.flt  KHMR-MULE.flt  KHMR-OTF.flt  KNDA-OTF.flt  LANGNAME.awk  LANGUAGE.awk  LANGUAGE.tbl  (+152 more)
FLT/: ARAB-OTF-NO-GPOS.flt  ARAB-OTF.flt  ARAB.flt  BENG-OTF.flt  BNG2-OTF.flt  CHAM-GENERIC.flt  COMBINING.flt  DEV2-OTF.flt  DEVA-CDAC.flt  DEVA-OTF.flt  GJR2-OTF.flt  GUJR-OTF.flt  GUR2-OTF.flt  GURU-OTF.flt  HEBR-FF.flt  HEBR-OTF.flt  HEBR.flt  KHMR-ANLONG.flt  KHMR-MULE.flt  KHMR-OTF.flt  KND2-OTF.flt  KNDA-OTF.flt  LAOO-ALICE.flt  LAOO-GENERIC.flt  LAOO-MULE.flt  LAOO-OTF.flt  MLM2-OTF.flt  MLYM-CDAC.flt  MLYM-OTF.flt  MLYM-RACHANA.flt  MYMR-MYAZEDI.flt  MYMR-SIL.flt  Makefile.am  NO-CTL.flt  ORY2-OTF.flt  ORYA-OTF.flt  SINH-OTF.flt  SYRC-OTF.flt  TAML-CDAC.flt  TAML-OTF.flt  (+11 more)
FORMATS/: 0General.ja.txt  0General.txt  CharsetList.ja.txt  CharsetList.txt  CodingList.ja.txt  CodingList.txt  Dir.ja.txt  Dir.txt  FLT.ja.txt  FLT.txt  FontEncoding.ja.txt  FontEncoding.txt  FontSize.txt  Fontset.ja.txt  Fontset.txt  IM-tut.txt  IM.ja.txt  IM.txt  README  bopo-kbd.eps  el-kbd.eps  he-kbd.eps  hr-kbd.eps  hy-kbd.eps  ka-kbd.eps  ka-kbd2.eps  kk-kbd.eps  latn-post.eps  ru-yawerty.eps  ru-yawerty2.eps  sk-kbd.eps  sk-kbd2.eps  sr-kbd.eps
LANGDATA/: .cvsignore  .gitignore  ISO-639-2.txt  LANGUAGE.awk  Makefile.am  README  aa.lnm  af.tbl  am.lnm  ar.lnm  as.lnm  az.lnm  az_Cyrl.lnm  az_Latn.lnm  be.lnm  bg.lnm  bn.tbl  bs.lnm  byn.tbl  ca.lnm  cs.lnm  cy.tbl  da.lnm  de.lnm  dv.tbl  dz.tbl  el.tbl  en.tbl  eo.tbl  es.tbl  et.lnm  eu.tbl  fa.tbl  fi.lnm  fo.tbl  fr.lnm  fur.lnm  ga.lnm  gez.tbl  gl.lnm  (+75 more)
MIM/: Makefile.am  am-sera.mim  ar-kbd.mim  ar-translit.mim  as-inscript.mim  as-inscript2.mim  as-phonetic.mim  ath-phonetic.mim  be-kbd.mim  bla-phonetic.mim  bn-inscript.mim  bn-inscript2.mim  bn-itrans.mim  bn-probhat.mim  bn-unijoy.mim  bo-ewts.mim  bo-tcrc.mim  brx-inscript2-deva.mim  cjk-util.mim  cmc-kbd.mim  cr-western.mim  cs-kbd.mim  da-post.mim  doi-inscript2-deva.mim  dv-phonetic.mim  eo-h-f.mim  eo-h.mim  eo-plena.mim  eo-q.mim  eo-vi.mim  eo-x.mim  fa-isiri.mim  fr-azerty.mim  global.mim  grc-mizuochi.mim  gu-inscript.mim  gu-inscript2.mim  gu-itrans.mim  gu-phonetic.mim  he-kbd.mim  (+137 more)
UNIDATA/: README  copyright.html
icons/: Makefile.am
m4/: ChangeLog
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile.in  Makevars  POTFILES.in  de.po  eo.po  ja.po  m17n-db.pot  vi.po
