# Makefile.am -- Makefile for the m17n database
# Copyright (C) 2007
#   National Institute of Advanced Industrial Science and Technology (AIST)
#   Registration Number H15PRO112

# This file is part of the m17n database; a sub-part of the m17n
# library.

# The m17n library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.

# The m17n library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with the m17n library; if not, write to the Free
# Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301, USA.

pkgdata_DATA = ${FONT_LAYOUT_TABLE}

EXTRA_DIST = ${FONT_LAYOUT_TABLE}

FONT_LAYOUT_TABLE = \
	ARAB.flt ARAB-OTF.flt ARAB-OTF-NO-GPOS.flt \
	BENG-OTF.flt \
	DEVA-CDAC.flt DEVA-OTF.flt \
	GUJR-OTF.flt \
	GURU-OTF.flt \
	HEBR.flt HEBR-FF.flt \
	KHMR-MULE.flt KHMR-ANLONG.flt KHMR-OTF.flt \
	KNDA-OTF.flt \
	LAOO-MULE.flt LAOO-ALICE.flt LAOO-GENERIC.flt LAOO-OTF.flt \
	MLYM-CDAC.flt MLYM-OTF.flt MLYM-RACHANA.flt \
	MYMR-MYAZEDI.flt \
	ORYA-OTF.flt \
	SINH-OTF.flt \
	SYRC-OTF.flt \
	TAML-CDAC.flt TAML-OTF.flt \
	TELU-OTF.flt \
	THAA-OTF.flt \
	THAI-TIS620.flt THAI-NORASI.flt THAI-GENERIC.flt THAI-OTF.flt \
	TIBT-MULE.flt TIBT-MTIB.flt TIBT-OTF.flt \
	NO-CTL.flt

pkgdatadir=$(datadir)/m17n

