# Makefile.am -- Makefile for the m17n database
# Copyright (C) 2007
#   National Institute of Advanced Industrial Science and Technology (AIST)
#   Registration Number H15PRO112

# This file is part of the m17n database; a sub-part of the m17n
# library.

# The m17n library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.

# The m17n library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with the m17n library; if not, write to the Free
# Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301, USA.

pkgdata_DATA = ${INPUT_METHOD}

EXTRA_DIST = ${INPUT_METHOD}

INPUT_METHOD = \
	am-sera.mim \
	ar-kbd.mim \
	as-itrans.mim \
	bn-itrans.mim \
	bn-unijoy.mim \
	bo-ewts.mim bo-wylie.mim\
	cmc-kbd.mim \
	da-post.mim \
	dv-phonetic.mim \
	el-kbd.mim \
	fa-isiri.mim \
	fr-azerty.mim \
	grc-mizuochi.mim \
	gu-itrans.mim \
	he-kbd.mim \
	hi-itrans.mim \
	hr-kbd.mim \
	hy-kbd.mim \
	ja-anthy.mim ja-tcode.mim ja-trycode.mim \
	ka-kbd.mim \
	kk-kbd.mim kk-arabic.mim \
	km-yannis.mim \
	kn-itrans.mim \
	ko-han2.mim ko-romaja.mim \
	lo-kbd.mim lo-lrt.mim \
	ml-itrans.mim \
	my-kbd.mim \
	or-itrans.mim \
	pa-itrans.mim \
	ru-kbd.mim ru-yawerty.mim ru-phonetic.mim \
	si-samanala.mim si-wijesekera.mim si-wijesekera-preedit.mim \
	sk-kbd.mim \
	sr-kbd.mim \
	sv-post.mim \
	ta-itrans.mim \
	te-itrans.mim \
	th-kesmanee.mim \
	th-pattachote.mim \
	th-tis820.mim \
	ug-kbd.mim \
	vi-base.mim vi-viqr.mim vi-telex.mim vi-vni.mim \
	zh-py.mim zh-py-gb.mim zh-py-b5.mim \
	zh-tonepy.mim zh-tonepy-gb.mim zh-tonepy-b5.mim \
	zh-cangjie.mim zh-quick.mim \
	zh-pinyin.mim \
	latn-post.mim latn-pre.mim \
	syrc-phonetic.mim \
	zh-bopomofo.mim \
	unicode.mim rfc1345.mim \
	ispell.mim \
	global.mim cjk-util.mim zh-util.mim

pkgdatadir=$(datadir)/m17n
